swager + productcontroller