@@ -1,11 +1,10 @@
 package com.esia.big_shop_backend.application.usecase.admin;
 
+import com.esia.big_shop_backend.application.usecase.admin.query.GetRevenueStatisticsQuery;
 import com.esia.big_shop_backend.domain.entity.Order;
 import com.esia.big_shop_backend.domain.repository.OrderRepository;
 import com.esia.big_shop_backend.domain.valueobject.enums.OrderStatus;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -14,7 +13,6 @@ import java.time.LocalDateTime;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,16 +20,16 @@ public class GetRevenueStatisticsUseCase {
     private final OrderRepository orderRepository;
 
     @Transactional(readOnly = true)
-    public RevenueStatistics execute() {
+    public RevenueStatistics execute(GetRevenueStatisticsQuery query) {
         // Get all delivered orders
-        Page<Order> allOrders = orderRepository.findAll(Pageable.unpaged());
-        List<Order> deliveredOrders = allOrders.getContent().stream()
+        List<Order> allOrders = orderRepository.findAll(0, Integer.MAX_VALUE);
+        List<Order> deliveredOrders = allOrders.stream()
                 .filter(order -> order.getStatus() == OrderStatus.DELIVERED)
-                .collect(Collectors.toList());
+                .toList();
 
         // Calculate total revenue
         double totalRevenue = deliveredOrders.stream()
-                .mapToDouble(order -> order.getTotalAmount().getAmount())
+                .mapToDouble(Order::getTotalAmount)
                 .sum();
 
         LocalDateTime now = LocalDateTime.now();
@@ -39,19 +37,19 @@ public class GetRevenueStatisticsUseCase {
         // Calculate daily revenue (today)
         double dailyRevenue = deliveredOrders.stream()
                 .filter(order -> order.getCreatedAt().toLocalDate().equals(now.toLocalDate()))
-                .mapToDouble(order -> order.getTotalAmount().getAmount())
+                .mapToDouble(Order::getTotalAmount)
                 .sum();
 
         // Calculate weekly revenue (last 7 days)
         double weeklyRevenue = deliveredOrders.stream()
                 .filter(order -> order.getCreatedAt().isAfter(now.minusDays(7)))
-                .mapToDouble(order -> order.getTotalAmount().getAmount())
+                .mapToDouble(Order::getTotalAmount)
                 .sum();
 
         // Calculate monthly revenue (last 30 days)
         double monthlyRevenue = deliveredOrders.stream()
                 .filter(order -> order.getCreatedAt().isAfter(now.minusDays(30)))
-                .mapToDouble(order -> order.getTotalAmount().getAmount())
+                .mapToDouble(Order::getTotalAmount)
                 .sum();
 
         // Group revenue by date for the last 30 days
@@ -60,7 +58,7 @@ public class GetRevenueStatisticsUseCase {
             LocalDate date = now.minusDays(i).toLocalDate();
             double revenue = deliveredOrders.stream()
                     .filter(order -> order.getCreatedAt().toLocalDate().equals(date))
-                    .mapToDouble(order -> order.getTotalAmount().getAmount())
+                    .mapToDouble(Order::getTotalAmount)
                     .sum();
             revenueByDate.put(date, revenue);
         }
